affinity_redis.yaml
apiVersion: v1
kind: Pod
metadata:
  name: redis
  label:
    app:redis
spec:
  affinity:
    podAntiAffinity:
      preferredDuringSchedulingIgnoredDuringExecution:
      - weight: 100
        podAffinityTerm:
          labelSelector:
            matchExpressions:
            - key: app
              operator: In
              values:
              - mysql
          topologyKey: kubernetes.io/hostname
  containers:
  - name: redis
    image: supergiantkir/animals:bear
