affinity_web.yaml
apiVersion: v1
kind: Pod
metadata:
  name: web
  label:
    app: web
spec:
  affinity:
    podAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
      - labelSelector:
          matchExpressions:
          - key: app
            operator: In
            values:
            - redis
        topologyKey: kubernetes.io/hostname
  containers:
  - name: web
    image: supergiantkir/animals:bear
