deployment_blue.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blue
  labels:
    app: blue
spec:
  replicas: 3
  selector:
    matchLabels:
      app: blue
  template:
    metadata:
      labels:
        app: blue
        canary: blue-green
    spec:
      containers:
      - name: blue
        image: supergiantkir/animals:bear
        ports:
        - containerPort: 80
