deployment_green.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: green
  labels:
    app: green
spec:
  replicas: 3
  selector:
    matchLabels:
      app: green
  template:
    metadata:
      labels:
        app: green
        canary: blue-green
    spec:
      containers:
      - name: green
        image: supergiantkir/animals:moose
        ports:
        - containerPort: 80
