lab.yaml
apiVersion: v1
kind: Pod
metadata:
  name: redis
spec:
  containers:
  - name: app1
    image: supergiantkir/animals:bear
    volumeMounts:
    - name: app-storage
      mountPath: /tmp/files1
  - name: app2
    image: yanivomc/spring-music:latest
    volumeMounts:
    - name: app-storage
      mountPath: /tmp/files2
  volumes:
  - name: test-volume
    hostPath:
     path: /storage
