green_blue_service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    deploy: blue-green
  name: blue-green-deployment
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    canary: blue-green
  type: LoadBalancer
